# selinux

./: .gitignore  Makefile  build.sh  meson.build  policy_minimal.conf
.github/: codeql-config.yml  codeql-custom.qls
.github/codeql-queries/: qlpack.yml
.github/workflows/: codeql-analysis.yml  run_tests.yml
checkpolicy/: .gitignore  Makefile  checkmodule-fuzzer.c  checkmodule.c  checkpolicy-fuzzer.c  checkpolicy.c  fuzz-dictionary.txt  min_pol.mls.conf  module_compiler.c  module_compiler.h  mybuild.sh  parse_util.c  policy_define.c  policy_define.h  policy_parse.y  policy_scan.l
checkpolicy/test/: dismod.c  dispol.c
checkpolicy/tests/: policy_allonce.conf  policy_allonce.expected.conf  policy_allonce.expected_opt.conf
dbus/: meson.build
gui/: meson.build
gui/po/: LINGUAS
libselinux/: .clang-tidy  Makefile  meson.build
libselinux/include/: meson.build
libselinux/include/selinux/: avc.h  label.h  restorecon.h  selinux.h
libselinux/man/: meson.build
libselinux/src/: Makefile  audit2why.c  avc.c  avc_internal.c  avc_sidtab.c  booleans.c  context.c  exception.sh  hashtab.c  init.c  label_file.c  label_media.c  label_support.c  label_x.c  load_policy.c  matchpathcon.c  meson.build  procattr.c  pyproject.toml  regex.c  reject_unknown.c  selinux_internal.h  selinux_restorecon.c  setrans_client.c  seusers.c
libselinux/tests/: test_python_wrap.py
libselinux/utils/: Makefile  getsebool.c  meson.build
libsemanage/: meson.build
libsemanage/include/: meson.build
libsemanage/man/: meson.build
libsemanage/src/: Makefile  booleans_activedb.c  booleans_policydb.c  compressed_file.c  conf-parse.y  database_activedb.c  database_file.c  database_join.c  database_llist.c  database_llist.h  database_policydb.c  debug.c  direct_api.c  exception.sh  genhomedircon.c  handle.c  ibendports_file.c  ibendports_local.c  ibpkeys_file.c  meson.build  modules.c  modules.h  parse_utils.c  parse_utils.h  ports_file.c  semanage_store.c  semanage_store.h  semanageswig_python.i  semanageswig_ruby.i  seusers_local.c  users_base_file.c  users_local.c  utilities.c  utilities.h
libsemanage/tests/: meson.build  test_utilities.c  utilities.c  utilities.h
libsemanage/utils/: meson.build
libsepol/: .gitignore  Makefile  meson.build  meson_options.txt
libsepol/checkpolicy/: Makefile  meson.build
libsepol/checkpolicy/test/: Makefile  meson.build
libsepol/checkpolicy/tests/: test_roundtrip.sh
libsepol/cil/src/: cil.c  cil_binary.c  cil_build_ast.c  cil_build_ast.h  cil_copy_ast.c  cil_find.c  cil_flavor.h  cil_fqn.c  cil_internal.h  cil_lexer.h  cil_lexer.l  cil_parser.c  cil_policy.c  cil_post.c  cil_reset_ast.c  cil_resolve_ast.c  cil_stack.c  cil_stack.h  cil_strpool.c  cil_symtab.c  cil_symtab.h  cil_tree.c  cil_tree.h  cil_verify.c  cil_verify.h  cil_write_ast.c
libsepol/include/: meson.build
libsepol/include/sepol/: cil  kernel_to_cil.h  kernel_to_conf.h  policydb.h
libsepol/include/sepol/policydb/: avrule_block.h  avtab.h  conditional.h  ebitmap.h  hashtab.h  initialsids.h  link.h  policydb.h  validate.h
libsepol/man/: meson.build
libsepol/src/: Makefile  assertion.c  avrule_block.c  avtab.c  booleans.c  conditional.c  constraint.c  context.h  debug.h  ebitmap.c  expand.c  hashtab.c  hierarchy.c  kernel_to_cil.c  kernel_to_common.c  kernel_to_common.h  kernel_to_conf.c  libsepol.map.in  link.c  meson.build  mls.c  module.c  module_to_cil.c  optimize.c  policydb.c  policydb_public.c  policydb_validate.c  private.h  services.c  sidtab.c  symtab.c  users.c  util.c  write.c
libsepol/tests/: Makefile  helpers.h  meson.build  prepare_testsuite.sh  test-ebitmap.c  test-neverallow.c
libsepol/tests/policies/: meson.build
libsepol/tests/policies/test-cond/: meson.build
libsepol/tests/policies/test-deps/: meson.build
libsepol/tests/policies/test-expander/: meson.build
libsepol/tests/policies/test-hooks/: meson.build
libsepol/tests/policies/test-linker/: meson.build
libsepol/tests/policies/test-neverallow/: meson.build
libsepol/utils/: chkcon.c  meson.build  sepol_check_access.c  sepol_compute_av.c  sepol_compute_member.c  sepol_compute_relabel.c  sepol_optimize.c  sepol_validate_transition.c
mcstrans/: meson.build
mcstrans/man/: meson.build
mcstrans/src/: Makefile  mcstrans.c  mcstransd.c  meson.build  mls_level.c
mcstrans/utils/: meson.build
policycoreutils/: meson.build
policycoreutils/hll/: meson.build
policycoreutils/load_policy/: meson.build
policycoreutils/man/: meson.build
policycoreutils/newrole/: Makefile  meson.build  newrole.c
policycoreutils/po/: LINGUAS
policycoreutils/run_init/: meson.build  open_init_pty.c  run_init.c
policycoreutils/scripts/: meson.build
policycoreutils/secon/: Makefile  meson.build  secon.c
policycoreutils/semodule/: Makefile  meson.build  semodule.c
policycoreutils/sestatus/: Makefile  meson.build  sestatus.c
policycoreutils/setfiles/: Makefile  meson.build  restore.c  restorecon_xattr.c  setfiles.c
policycoreutils/setsebool/: Makefile  meson.build  setsebool.c
policycoreutils/unsetfiles/: meson.build
python/: meson.build
python/audit2allow/: Makefile  meson.build  sepolgen-ifgen-attr-helper.c
python/chcat/: meson.build
python/po/: LINGUAS
python/semanage/: meson.build
python/sepolgen/src/: meson.build
python/sepolgen/src/sepolgen/: meson.build
python/sepolgen/src/share/: meson.build
python/sepolgen/tests/: meson.build
python/sepolicy/: meson.build  pyproject.toml
restorecond/: Makefile  meson.build  restore.c  restorecond.c  stringslist.c  user.c  utmpwatcher.c  watch.c
sandbox/: Makefile  meson.build  seunshare.c
sandbox/po/: LINGUAS
scripts/: oss-fuzz.sh  run-scan-build
secilc/: Makefile  meson.build  run_test.sh  secilc.c
secilc/test/: policy.cil
semodule-utils/: meson.build
semodule-utils/semodule_expand/: Makefile  meson.build
semodule-utils/semodule_link/: Makefile  meson.build
semodule-utils/semodule_package/: Makefile  (+1 more)
subprojects/: ReadMe  dbus  libselinux  libsemanage  mcstrans  policycoreutils  restorecond  secilc  semodule-utils
(+6 files in other folders)
